change overflow to none to fix brocken scrolling in packed app mode

--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,5 @@
 html, body{
-    overflow: none;
+    overflow-y: auto;
     height: 100%;
     width:100%;
     padding: 0px;
